# mcp-db-demo

./: .env.example  .gitignore  README.md  docker-compose.yml
app/: Dockerfile  main.py  pyproject.toml
server/: Dockerfile  db_models.py  db_utils.py  main.py  mcp_db_server.py  pyproject.toml  requirements.txt
